# whatsapp-api-client-cpp

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  build debug.bat  build release.bat  build.sh  install.sh  main.cpp
examples/: createGroupAndSendMessage.cpp  receiveIncomingNotifications.cpp  sendFileByUpload.cpp  sendFileByUrl.cpp  test_accaunt.cpp  test_groups.cpp  test_journals.cpp  test_partners.cpp  test_queues.cpp  test_readMark.cpp  test_receiving.cpp  test_scanqrcode.cpp  test_sending.cpp  test_serviceMethods.cpp  test_statuses.cpp
include/: config.hpp  greenapi.hpp  helpers.hpp
include/helpers/: logger.hpp  mimeTypes.hpp  requests.hpp  response.hpp
include/methods/: account.hpp  groups.hpp  journals.hpp  queues.hpp  readMark.hpp  receiving.hpp  sending.hpp  serviceMethods.hpp  statuses.hpp
source/: greenapi.cpp
source/helpers/: logger.cpp  mimeTypes.cpp  requests.cpp
source/methods/: account.cpp  groups.cpp  journals.cpp  queues.cpp  readMark.cpp  receiving.cpp  sending.cpp  serviceMethods.cpp  statuses.cpp
